Diferencia entre rutas absolutas y relativas, pueden dar problemas

--- a/Reto 4/index.html
+++ b/Reto 4/index.html
@@ -53,7 +53,7 @@
         
         <section>
             <figure>
-                <img src="/Reto 3/imagen/—Pngtree—future technology mobile internet business_5753881.png" alt="">
+                <img src="./imagen/—Pngtree—future technology mobile internet business_5753881.png" alt="">
             </figure>
         </section>
 
@@ -67,7 +67,7 @@
         <div class="left-container--item1">
             <a href="#">
                 <figure>
-                    <img src="/Reto 3/imagen/web-development.png" alt="">
+                    <img src="./imagen/web-development.png" alt="">
                     <figcaption>Web Developer</figcaption>
                 </figure>
             </a>
@@ -75,7 +75,7 @@
         <div class="left-container--item2">
             <a href="#">
                 <figure>
-                    <img src="/Reto 3/imagen/web-design.png" alt="">
+                    <img src="./imagen/web-design.png" alt="">
                     <figcaption>Web Design</figcaption>
                 </figure>
             </a>
@@ -83,7 +83,7 @@
         <div class="left-container--item3">
             <a href="#">
                 <figure>
-                    <img src="/Reto 3/imagen/programer.png" alt="">
+                    <img src="./imagen/programer.png" alt="">
                     <figcaption>Programmer</figcaption>
                 </figure>
             </a>
@@ -91,7 +91,7 @@
         <div class="left-container--item4">
             <a href="#">
                 <figure>
-                    <img src="/Reto 3/imagen/backend.png" alt="">
+                    <img src="./imagen/backend.png alt="">
                     <figcaption>Backend Developer</figcaption>
                 </figure>
             </a>
