--- a/Reto 4/index.html
+++ b/Reto 4/index.html
@@ -91,7 +91,7 @@
         <div class="left-container--item4">
             <a href="#">
                 <figure>
-                    <img src="./imagen/backend.png alt="">
+                    <img src="./imagen/backend.png" alt="">
                     <figcaption>Backend Developer</figcaption>
                 </figure>
             </a>
