--- a/Reto 3/index.html
+++ b/Reto 3/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./Css/normalize.cs">
     <link rel="stylesheet" href="./Css/StylePro.css">
     <title>Document</title>
 </head>
@@ -15,6 +16,7 @@
     <main>
         <header class="header">
             <nav class="nav-main">
+                
                 <figure>
                     <img src="./imagen/coding.png" alt="">
                     <figcaption>Web Development</figcaption>
@@ -50,16 +52,15 @@
             </nav>
         </header>
         
-        <section class="section1">
+        <section>
             <figure>
-                <img src="./imagen/Technology.png" alt="">
+                <img src="/Reto 3/imagen/—Pngtree—future technology mobile internet business_5753881.png" alt="">
             </figure>
         </section>
 
-        <section class="section2">
-            <p>Technology</p>
-            <p>Moves The</p>
-            <p>World</p>
+        <section>
+            <p>Technology Moves The World</p>
+
         </section>
     </main>
 
@@ -67,7 +68,7 @@
         <div class="left-container--item1">
             <a href="#">
                 <figure>
-                    <img src="./imagen/web-development.png" alt="">
+                    <img src="/Reto 3/imagen/web-development.png" alt="">
                     <figcaption>Web Developer</figcaption>
                 </figure>
             </a>
@@ -75,7 +76,7 @@
         <div class="left-container--item2">
             <a href="#">
                 <figure>
-                    <img src="./imagen/web-design.png" alt="">
+                    <img src="/Reto 3/imagen/web-design.png" alt="">
                     <figcaption>Web Design</figcaption>
                 </figure>
             </a>
@@ -83,7 +84,7 @@
         <div class="left-container--item3">
             <a href="#">
                 <figure>
-                    <img src="./imagen/programer.png" alt="">
+                    <img src="/Reto 3/imagen/programer.png" alt="">
                     <figcaption>Programmer</figcaption>
                 </figure>
             </a>
@@ -91,7 +92,7 @@
         <div class="left-container--item4">
             <a href="#">
                 <figure>
-                    <img src="./imagen/backend.png" alt="">
+                    <img src="/Reto 3/imagen/backend.png" alt="">
                     <figcaption>Backend Developer</figcaption>
                 </figure>
             </a>
