--- a/Reto 3/index.html
+++ b/Reto 3/index.html
@@ -54,7 +54,7 @@
         
         <section>
             <figure>
-                <img src="/Reto 3/imagen/—Pngtree—future technology mobile internet business_5753881.png" alt="">
+                <img src="./imagen/Technology.png" alt="">
             </figure>
         </section>
 
@@ -68,7 +68,7 @@
         <div class="left-container--item1">
             <a href="#">
                 <figure>
-                    <img src="/Reto 3/imagen/web-development.png" alt="">
+                    <img src="./imagen/web-development.png" alt="">
                     <figcaption>Web Developer</figcaption>
                 </figure>
             </a>
@@ -76,7 +76,7 @@
         <div class="left-container--item2">
             <a href="#">
                 <figure>
-                    <img src="/Reto 3/imagen/web-design.png" alt="">
+                    <img src="./imagen/web-design.png" alt="">
                     <figcaption>Web Design</figcaption>
                 </figure>
             </a>
@@ -84,7 +84,7 @@
         <div class="left-container--item3">
             <a href="#">
                 <figure>
-                    <img src="/Reto 3/imagen/programer.png" alt="">
+                    <img src="./imagen/programer.png" alt="">
                     <figcaption>Programmer</figcaption>
                 </figure>
             </a>
@@ -92,7 +92,7 @@
         <div class="left-container--item4">
             <a href="#">
                 <figure>
-                    <img src="/Reto 3/imagen/backend.png" alt="">
+                    <img src="./imagen/backend.png" alt="">
                     <figcaption>Backend Developer</figcaption>
                 </figure>
             </a>
