--- a/Reto 3/index.html
+++ b/Reto 3/index.html
@@ -52,13 +52,13 @@
             </nav>
         </header>
         
-        <section>
+        <section class="main-picture">
             <figure>
                 <img src="./imagen/Technology.png" alt="">
             </figure>
         </section>
 
-        <section>
+        <section class="main-title">
             <p>Technology Moves The World</p>
 
         </section>
